--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <title>Кекстаграм</title>
-  <script src=”functions.js”></script>
-  <script src=”main.js”></script>
+  <script src="/js/utils.js" type="module"></script>
+  <script src="/js/data.js" type="module"></script>
+  <script src="/js/picture.js" type="module"></script>
+  <script src="/js/bigpicture.js" type="module"></script>
 </head>
 
 <body>
